--- a/aim/web/ui/src/modules/BaseExplorer/components/Grouping/Grouping/Grouping.scss
+++ b/aim/web/ui/src/modules/BaseExplorer/components/Grouping/Grouping/Grouping.scss
@@ -3,7 +3,6 @@
 .BaseGrouping {
   display: flex;
   align-items: center;
-  width: 30%;
   &__title {
     margin-right: $space-xxxs;
   }
