--- a/aim/web/ui/src/modules/BaseExplorer/components/Visualizer/Visualizer.scss
+++ b/aim/web/ui/src/modules/BaseExplorer/components/Visualizer/Visualizer.scss
@@ -11,10 +11,4 @@
     display: flex;
     height: calc(100% - 5rem);
   }
-  .VisualizerPanel {
-    height: 2rem;
-    display: flex;
-    padding: $space-xxxs $space-lg;
-    border-bottom: $border-grey;
-  }
 }
